# redonk

./: .travis.yml  Cargo.toml  README.md  notes.md
src/: main.rs
t/000-set-minus-e/: all.do
t/121-defaults-nested/: test.do
t/200-shell/: shelltest.do
t/201-fail/: all.do
tests/: apenwarr-cases.rs
