[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "redonk"
version = "0.1.0"

[dependencies]
clap = "2.30.0"
env_logger = "0.5.4"
error-chain = "0.11.0"
log = "0.4.1"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
structopt = "0.2.3"
tempfile = "2.2.0"

[dev-dependencies]
tempdir = "0.3.6"
walkdir = "2.1.4"
